--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "eslint-config-next": "13.0.7",
     "framer-motion": "^6.5.1",
     "next": "13.0.7",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-image-gallery": "^1.2.11",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
+    "react-scroll-to-top": "^3.0.0",
+    "react-star-rating-lite": "^0.0.11",
     "sass": "^1.57.0"
   }
 }
