--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^8.0.5",
     "react-scroll-to-top": "^3.0.0",
     "react-star-rating-lite": "^0.0.11",
+    "react-toastify": "^9.1.1",
     "sass": "^1.57.0"
   }
 }
